Index and show pages for Student and Home

--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta charset="UTF-8"/>
 		<title>List of all students</title>
 	</head>
 	<body>
@@ -13,6 +14,7 @@
 				<th>Place</th>
 				<th>Date</th>
 				<th rowspan="2">Email</th>
+				<th colspan="2" rowspan="2">Actions</th>
 			</tr>
 			<tr>
 				<th colspan="2">of birth</th>
@@ -24,6 +26,8 @@
 				<td>Budapest</td>
 				<td>1970-02-05</td>
 				<td>ruth@computing.hu</td>
+				<td><a href="/student/1">show</a></td>
+				<td>delete</td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -32,6 +36,8 @@
 				<td>New York</td>
 				<td>1975-06-12</td>
 				<td>joe@it.us</td>
+				<td><a href="/student/2">show</a></td>
+				<td>delete</td>
 			</tr>
 			<tr>
 				<td>3</td>
@@ -40,6 +46,8 @@
 				<td>Berlin</td>
 				<td>1968-01-30</td>
 				<td>rachel@math.de</td>
+				<td><a href="/student/3">show</a></td>
+				<td>delete</td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -48,6 +56,8 @@
 				<td>Wien</td>
 				<td>1985-08-11</td>
 				<td>hilde@chem.at</td>
+				<td><a href="/student/4">show</a></td>
+				<td>delete</td>
 			</tr>
 		</table>
 	</body>
