Viewmodel for presenting bool values in a viewfile-specific manner

--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -10,7 +10,7 @@
 			<tr>
 				<th rowspan="2">#</th>
 				<th rowspan="2">Name</th>
-				<th rowspan="2">Male?</th>
+				<th rowspan="2">Gender</th>
 				<th>Place</th>
 				<th>Date</th>
 				<th rowspan="2">Email</th>
@@ -22,7 +22,7 @@
 			<tr>
 				<td>1</td>
 				<td>Ruth</td>
-				<td>0</td>
+				<td>Female</td>
 				<td>Budapest</td>
 				<td>1970-02-05</td>
 				<td>ruth@computing.hu</td>
@@ -32,7 +32,7 @@
 			<tr>
 				<td>2</td>
 				<td>Joe</td>
-				<td>1</td>
+				<td>Male</td>
 				<td>New York</td>
 				<td>1975-06-12</td>
 				<td>joe@it.us</td>
@@ -42,7 +42,7 @@
 			<tr>
 				<td>3</td>
 				<td>Rachel</td>
-				<td>0</td>
+				<td>Female</td>
 				<td>Berlin</td>
 				<td>1968-01-30</td>
 				<td>rachel@math.de</td>
@@ -52,7 +52,7 @@
 			<tr>
 				<td>4</td>
 				<td>Hilde</td>
-				<td>0</td>
+				<td>Female</td>
 				<td>Wien</td>
 				<td>1985-08-11</td>
 				<td>hilde@chem.at</td>
