Capital letter, layout, test expectation fixing

--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -26,8 +26,8 @@
 				<td>Budapest</td>
 				<td>1970-02-05</td>
 				<td>ruth@computing.hu</td>
-				<td><a href="/student/1">show</a></td>
-				<td>delete</td>
+				<td><a href="/student/1">Show</a></td>
+				<td><form method="POST" action="/student/1/delete"><input type="submit" value="Delete"/></form></td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -36,8 +36,8 @@
 				<td>New York</td>
 				<td>1975-06-12</td>
 				<td>joe@it.us</td>
-				<td><a href="/student/2">show</a></td>
-				<td>delete</td>
+				<td><a href="/student/2">Show</a></td>
+				<td><form method="POST" action="/student/2/delete"><input type="submit" value="Delete"/></form></td>
 			</tr>
 			<tr>
 				<td>3</td>
@@ -46,8 +46,8 @@
 				<td>Berlin</td>
 				<td>1968-01-30</td>
 				<td>rachel@math.de</td>
-				<td><a href="/student/3">show</a></td>
-				<td>delete</td>
+				<td><a href="/student/3">Show</a></td>
+				<td><form method="POST" action="/student/3/delete"><input type="submit" value="Delete"/></form></td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -56,8 +56,8 @@
 				<td>Wien</td>
 				<td>1985-08-11</td>
 				<td>hilde@chem.at</td>
-				<td><a href="/student/4">show</a></td>
-				<td>delete</td>
+				<td><a href="/student/4">Show</a></td>
+				<td><form method="POST" action="/student/4/delete"><input type="submit" value="Delete"/></form></td>
 			</tr>
 		</table>
 	</body>
