--- a/test/GET-student-2.html
+++ b/test/GET-student-2.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Show student #2</h1>
-		<form>
+		<form method="POST" action="/student/2">
 			<ul>
 				<li>Identity: 2</li>
 				<li>
@@ -30,6 +30,7 @@
 					<input type="text" name="email" value="joe@it.us"/>
 				</li>
 			</ul>
+			<input type="submit" value="Update"/>
 		</form>
 	</body>
 </html>
