Minor change: ouse more orthodox form of URI

--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -60,5 +60,6 @@
 				<td><form method="POST" action="/student/4/delete"><input type="submit" value="Delete"/></form></td>
 			</tr>
 		</table>
+		<a href="/student/new">Add a new student</a>
 	</body>
 </html>
