Port `student` CRUD into `study group` CRUD

--- a/test/GET.html
+++ b/test/GET.html
@@ -8,6 +8,7 @@
 		<h1>Home</h1>
 		<ul>
 			<li><a href="/student">Students</a></li>
+			<li><a href="/study-groups">Study groups</a></li>
 		</ul>
 	</body>
 </html>
