--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="/css/menu.css"/>
 		<link rel="stylesheet" href="/css/table.css"/>
 		<title>List of all students</title>
 	</head>
 	<body>
+		<ul class="upper-menu">
+			<li><a class="menu-icon" href="/">Back to home</a></li>
+			<li><a class="menu-icon" href="/study-group">Change to see study groups list instead</a></li>
+		</ul>
 		<h1>List of all students</h1>
 		<a class="add" href="/student/new">Add a new student</a>
 		<table class="records">
