--- a/test/GET.html
+++ b/test/GET.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="/css/menu.css"/>
 		<title>Home</title>
 	</head>
 	<body>
-		<h1>Home</h1>
-		<ul>
-			<li><a href="/student">Students</a></li>
-			<li><a href="/study-groups">Study groups</a></li>
+		<ul class="upper-menu">
+			<li><a class="menu-icon" href="/student">Students list</a></li>
+			<li><a class="menu-icon" href="/study-group">Study groups list</a></li>
 		</ul>
+		<h1>Home</h1>
 	</body>
 </html>
