--- a/test/GET-student-22.html
+++ b/test/GET-student-22.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="/css/menu.css"/>
 		<link rel="stylesheet" href="/css/form.css"/>
 		<title>Show student #2</title>
 	</head>
 	<body>
+		<ul class="upper-menu">
+			<li><a class="menu-icon" href="/student">Back to students list</a></li>
+		</ul>
 		<h1>Show student #2</h1>
 		<h2>Watch or fill</h2>
 		<form method="POST" action="/student/2">
