Linking source code and living hosted application together

--- a/test/GET.html
+++ b/test/GET.html
@@ -11,5 +11,6 @@
 			<li><a class="menu-icon" href="/study-group">Study groups list</a></li>
 		</ul>
 		<h1>Home</h1>
+		This is a sample custom miniframework sample. You can see <a href="https://github.com/alignalghii/mini-studadmin">its sourcecode on GitHub</a>.
 	</body>
 </html>
