--- a/test/GET-student-2.html
+++ b/test/GET-student-2.html
@@ -7,7 +7,11 @@
 		<title>Show student #2</title>
 	</head>
 	<body>
-		<ul class="upper-menu">
+		<ul class="upper-menu external">
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin">GitHub repository</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/master/app/Controller/StudentController.php">Source file of the concerned controller</a></li>
+		</ul>
+		<ul class="upper-menu internal">
 			<li><a class="menu-icon" href="/student">Back to students list</a></li>
 		</ul>
 		<h1>Show student #2</h1>
