Partial usage of call tree hierarchy for sourcecode documentation + put it ito standalone files

--- a/test/GET-student.html
+++ b/test/GET-student.html
@@ -8,8 +8,13 @@
 	</head>
 	<body>
 		<ul class="upper-menu external">
-			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin">GitHub repository</a></li>
-			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/master/app/Controller/StudentController.php">Source file of the concerned controller</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin" target="_blank">GitHub repository</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/Routes.php#L21" target="_blank">Router match</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/Controller/StudentController.php#L17-L33" target="_blank">Controller action</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/framework/ORM/Repository.php#L31-L36" target="_blank">Model/DB-repo</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/MetaTables/StudentMetaTable.php" target="_blank">Schema @ PHP</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/database/schema/table-create-student.sql" target="_blank">Schema @ SQL</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/View/Student/index.php" target="_blank">View</a></li>
 		</ul>
 		<ul class="upper-menu internal">
 			<li><a class="menu-icon" href="/">Back to home</a></li>
