--- a/test/GET.html
+++ b/test/GET.html
@@ -7,8 +7,10 @@
 	</head>
 	<body>
 		<ul class="upper-menu external">
-			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin">GitHub repository</a></li>
-			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/master/app/Controller/HomeController.php">Source file of the concerned controller</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin" target="_blank">GitHub repository</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/Routes.php#L20" target="_blank">Router match</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/Controller/HomeController.php#L12-L17" target="_blank">Controller action</a></li>
+			<li><a class="menu-icon" href="https://github.com/alignalghii/mini-studadmin/blob/92efdbce271416373b116ec348a40d30e216a2e2/app/View/Home/index.php" target="_blank">View</a></li>
 		</ul>
 		<ul class="upper-menu internal">
 			<li><a class="menu-icon" href="/student">Students list</a></li>
